tests/negative/resource_place_event_leak.ora
resource TokenUnit = u256;

contract ResourcePlaceEventLeak {
    log Bad(place: Resource<TokenUnit>);
}
